[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_2024"
path = "src/lib.rs"

[[bin]]
name = "aoc_2024"
path = "src/main.rs"

[dependencies]
eyre = "0.6.12"
color-eyre = { version = "0.6.3", features = ["capture-spantrace", "color-spantrace"] }
reqwest = { version = "0.12.9", features = ["cookies"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.41.1", features = ["full"] }
itertools = "0.13.0"
owo-colors = "4.1.0"
find_all = "2.0.0"
rand = "0.8.5"
array-init = "2.1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"

[[bench]]
name = "day9"
harness = false

[[bin]]
name = "day8"
path = "src/day8.rs"
