[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_2024"
path = "src/lib.rs"

[[bin]]
name = "aoc_2024"
path = "src/main.rs"

[dependencies]
eyre = "0.6.12"
color-eyre = { version = "0.6.3", features = ["capture-spantrace", "color-spantrace"] }
reqwest = { version = "0.12.9", features = ["cookies"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.41.1", features = ["full"] }
itertools = "0.13.0"
owo-colors = "4.1.0"
find_all = "2.0.0"
rand = "0.8.5"
array-init = "2.1.0"
cached = "0.54.0"
anes = "0.2.0"
petgraph = "0.6.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day8"
path = "src/day8.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day12"
path = "src/day12.rs"

[[bin]]
name = "day13"
path = "src/day13.rs"

[[bin]]
name = "day14"
path = "src/day14.rs"

[[bin]]
name = "day15"
path = "src/day15.rs"

[[bin]]
name = "day16"
path = "src/day16.rs"

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[[bench]]
name = "day3"
harness = false

[[bench]]
name = "day4"
harness = false

[[bench]]
name = "day5"
harness = false

[[bench]]
name = "day6"
harness = false

[[bench]]
name = "day7"
harness = false

[[bench]]
name = "day8"
harness = false

[[bench]]
name = "day9"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false

[[bench]]
name = "day13"
harness = false

[[bench]]
name = "day14"
harness = false

[[bench]]
name = "day15"
harness = false

[[bench]]
name = "day16"
harness = false
